More removal of the should-be-deprecated Boolean constructor.
-- Jon